--- a/frontEnd/src/styles/Advertisment.css
+++ b/frontEnd/src/styles/Advertisment.css
@@ -5,40 +5,35 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0  5em 5em;
-   
+    padding: 3rem;
   
 }
 .mc-block{
     background: hsla(0, 0%, 98%, 1);
-    width: 85%;
-    min-width: 700px;
-    /* height: 100%; */
-    /* min-height: fit-content; */
+    width: 100%;
+    min-width: 100px;
     border-radius: 40px;
     text-align: center;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 2em;
+    padding: 2em;
     gap: 1em;
 }
-.mc-theme{
-    font-family: "Poppins";
-    font-weight: 500;
-}
 .main-theme{
-    font-size: 1rem;
+    font-size: 2rem;
     line-height: 1.2rem;
     color: #f08c00;
     padding-bottom: 1rem;
-   
+   font-weight: bold;
     
 }
 .main-item{
     font-size: 2rem;
-    line-height: 3rem;
+    line-height: 1.7;
     padding: 0 1em 1em 1em;
+    font-weight: 600;
+    letter-spacing: 10px;
 }
 
 .contacts-link{
@@ -49,7 +44,7 @@
     background-color: #f08c00;
     border: none;
     border-radius: 10px;
-    margin-top: 2em;
+    margin-top: 2rem;
     font-weight: 700;
 }
 .contacts-link:hover,
@@ -60,4 +55,73 @@
 }
 .mc-img{
 width: 100%;
+min-width: 200px;
+}
+@media (max-width:1024px){
+    .mc-block{
+        width: 100%;
+        padding: 2rem 3rem 2rem 0;
+    }
+    .main-theme{
+        font-size: 1.3rem;
+    }
+    .main-item{
+        font-size: 1.5rem;
+        font-weight: 600;
+        letter-spacing: 5px;
+    }
+    .contacts-link{
+        margin-top: 1.3rem;
+        font-size: 0.7rem;
+    }
+}
+@media(max-width:768px){
+    .mc-block{
+        width: 100%;
+        min-width: 400px;
+        border-radius: 40px;
+        gap: 0;
+        padding: 2rem 3rem 2rem 1rem;
+    }
+    .main-theme{
+        font-size: 1rem;
+    }
+    .main-item{
+        font-size: 1rem;
+        font-weight: bold;
+        line-height: 1.3;
+        letter-spacing: 5px;
+    }
+    .contacts-link{
+        margin-top: 1rem;
+        font-size: 0.5rem;
+    }
+   
+}
+@media(max-width:480px){
+    .mc-block{
+        width: 100%;
+        min-width: 200px;
+
+        padding: 1rem 2em 0.5rem 1rem;
+
+    }
+    .mc-block{
+        flex-direction: column;
+    }
+    .main-theme{
+        font-size: 0.8rem;
+    }
+    .main-item{
+        font-size: 1rem;
+        line-height: 1;
+        letter-spacing: 3px;
+    }
+    .contacts-link{
+        margin-top: 0.6rem;
+        font-size: 0.3rem;
+    }
+    .mc-img{
+        padding: 2rem;
+    }
 }
