--- a/frontEnd/src/styles/SearchBox.css
+++ b/frontEnd/src/styles/SearchBox.css
@@ -30,5 +30,19 @@ background: none;
 font-size: 1.5rem;
 color: #f08c00;
 }
-
-  
+@media(max-width:768px){
+    .search-inp::placeholder{
+        font-size: 1.1rem;
+    }
+    .search-btn{
+        font-size: 1.4rem;
+    }
+}
+@media(max-width:480px){
+.search-inp::placeholder{
+    font-size: 0.9rem;
+}
+.search-btn{
+    font-size: 1.1rem;
+}
+}
