--- a/frontEnd/src/styles/ToursList.css
+++ b/frontEnd/src/styles/ToursList.css
@@ -26,7 +26,23 @@
     background: linear-gradient(90deg, rgba(24, 100, 171, 1) 0%, rgba(230, 119, 0, 1) 100%);
     border-radius: 2px;
     margin: 1rem auto;
-    width: 60%; /* adjust as needed */
-  
+    width: 60%; 
+}
+@media(max-width:768px){
+.tour-list{
+  gap: 3rem;
+}
+.tourList-theme{
+  font-size: 1.5rem;
+  margin-top: 2rem;
+}
+}
+@media(max-width: 480px){
+  .tour-list{
+    gap: 1.5rem;
+  }
+  .tourList-theme{
+    font-size: 1.3rem;
+  }
 }
 
